Updated the styles... Preventing wrapping of text of entry, blue date on print, reduce Bootstrap padding on print

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-size: 18px;
+}
+
 #dragAndDrop {
   min-height: 300px;
   border: 5px dotted rgb(39, 132, 176);
@@ -34,8 +38,7 @@
 }
 
 .do-entry {
-  margin-top: 1em;
-  margin-bottom: 2em;
+  margin-top: 3em;
   page-break-inside:avoid;
   font-size: 1.2em;
 }
@@ -54,8 +57,10 @@
 .do-entry-photo {
   display: block;
   max-width: 100%;
-  max-height: 760px;
-  margin: 0 auto 1em;
+  max-height: 528px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 1em;
 }
 
 .do-entry-photo-loading {
@@ -65,6 +70,10 @@
   width: 100%;
   padding: 10%;
   text-align: center;
+}
+
+.do-entry-text-container {
+  page-break-inside:avoid;
 }
 
 .do-entry-text p:first-child {
@@ -90,6 +99,7 @@
   z-index: 9999999;
   background-color: rgba(255, 255, 255, .9);
 }
+
 .progress-overlay > div {
   position: absolute;
   top: 50%;
@@ -103,5 +113,14 @@
 @media print {
   #dayOneRenderTarget {
     margin-top: 0;
+  }
+
+  .do-entry-date span {
+    color: #399FC3 !important;
+  }
+
+  .container {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
